# argus-distribution

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  LICENSE.md  README.md  extract_character_files.sh  install.sh
apps/: CMakeLists.txt  argus_cloth.cpp
conf/: belt_high_tension.json  box_and_cone.json  box_and_cone_0_00.json  box_and_cone_0_17.json  box_and_cone_0_34.json  box_and_cone_0_50.json  cards_high_friction.json  cards_low_friction.json  drag_cloth.json  inclined_plane.json
conf/character/Arabesque/: KyraArabesque-sixtiesdress-0-0.json  KyraArabesque-sixtiesdress-0-3.json
conf/character/Clubbing/: KyraClubbing-sixtiesdress-0-0.json  KyraClubbing-sixtiesdress-0-1.json  KyraClubbing-sixtiesdress-0-3.json
conf/character/HipHop/: KyraHipHop-hoodie-0-0.json  KyraHipHop-hoodie-0-3.json
conf/character/Shawl/: KyraShawl-shawl-0-3.json  KyraShawl-shawl-0-6.json
conf/character/Twist/: KyraTwist-batwingdress-0-0.json  KyraTwist-batwingdress-0-1.json  KyraTwist-batwingdress-0-3.json  KyraTwist-batwingdress-0-6.json
examples/: argus.py  argus_interface.py  belt_high_tension.py  box_and_cone.py  cards_high_friction.py  cards_low_friction.py  drag_cloth.py  run_all.sh
examples/character/: Arabesque-0-0.py  Arabesque-0-3.py  Clubbing-0-0.py  Clubbing-0-1.py  Clubbing-0-3.py  HipHop-0-0.py  HipHop-0-3.py  Shawl-0-3.py  Shawl-0-6.py  Twist-0-0.py  Twist-0-1.py  Twist-0-3.py  Twist-0-6.py
figures/: fig_11.sh  fig_11.tex  fig_5.py  fig_5.tex
materials/: isotropic.json  paper.json
shader/: shader.frag  shader.vert
src/: CMakeLists.txt
src/applications/: application.cpp  application.h  arcsim_application.cpp  arcsim_application.h
src/display/: camera.cpp  camera.h  display_helper.h  drawable.cpp  drawable.h  interface.cpp  interface.h  shader.cpp  shader.h  timestep.cpp  timestep.h
src/integrators/: bogus_integrator.cpp  bogus_integrator.h  integrator.cpp  integrator.h
src/simulators/: arc_simulator.cpp  arc_simulator.h  simulator.cpp  simulator.h
